Testing out flexbox
Adding in flexbox files for grid system

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/ui-grid-unstable.css">
+        <link rel="stylesheet" href="css/flexiblegs.css">
         <link rel="stylesheet" href="css/angular-busy.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
@@ -48,6 +48,7 @@
                 <div class="nav-icon"><a href="#contact">PST</a></div>
             </div>
             <div class="app" ng-view>
+                <div class="sidebar"></div>
             </div>
             <div class="push"></div>
         </div>           
@@ -60,7 +61,6 @@
         <script src="js/vendor/angular-route.js"></script>
         <script src="js/vendor/angular-resource.js"></script>
         <script src="js/vendor/angular-animate.js"></script>
-        <script src="js/vendor/ui-grid-unstable.js"></script>
         <script src="js/vendor/angular-busy.js"></script>
         <script src="js/vendor/highcharts.js"></script>
         <script src="js/vendor/moment.min.js"></script>
