--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
             </div>
             <div class="app" ng-view>
                 <div class="sidebar"></div>
+                <div class="wrap gutter-10-xs gutter-out-xs"></div>
             </div>
             <div class="push"></div>
         </div>           
