Initial card ui system
Responsive card ui. Will add proper color schemes later.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/flexiblegs.css">
         <link rel="stylesheet" href="css/angular-busy.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <!--<script src="js/vendor/modernizr-2.8.3.min.js"></script>-->
     </head>
     <body ng-controller="paController">
         <!--[if lt IE 8]>
@@ -48,8 +48,36 @@
                 <div class="nav-icon"><a href="#contact">PST</a></div>
             </div>
             <div class="app" ng-view>
-                <div class="sidebar"></div>
-                <div class="wrap gutter-10-xs gutter-out-xs"></div>
+                <div class="sidebar">sdf</div>
+                <div class="cardui wrap gutter-5-xl gutter-10-xs gutter-out-xs">
+                    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                        <div class="card">card 1</div>
+                    </div>
+                    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                        <div class="card">card 2</div>
+                    </div>
+                    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                        <div class="card">card 3</div>
+                    </div>
+                    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                        <div class="card">card 4</div>
+                    </div>
+                    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                        <div class="card">card 5</div>
+                    </div>
+                    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                        <div class="card">card 6</div>
+                    </div>
+                    <div class="xl-3-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                        <div class="card">card 7</div>
+                    </div>
+                    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                        <div class="card">card 8</div>
+                    </div>
+                    <div class="xl-1-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                        <div class="card">card 9</div>
+                    </div>
+                </div>
             </div>
             <div class="push"></div>
         </div>           
