Minor stylistic changes

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/bootstrap.css">
+        <!--<link rel="stylesheet" href="css/bootstrap.css">-->
         <link rel="stylesheet" href="css/flexiblegs.css">
         <link rel="stylesheet" href="css/angular-busy.css">
     <!--<script src="js/vendor/modernizr-2.8.3.min.js"></script>-->
@@ -93,9 +93,9 @@
         <script src="js/vendor/angular-busy.js"></script>
         <script src="js/vendor/highcharts.js"></script>
         <script src="js/vendor/moment.min.js"></script>
-        <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
+        <!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
         <script src="http://code.highcharts.com/modules/data.js"></script>
-        <script src="http://code.highcharts.com/modules/no-data-to-display.js"></script>
+        <script src="http://code.highcharts.com/modules/no-data-to-display.js"></script>-->
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
     </body>
