Minor stylistic changes

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 <div class="clear"></div>
             </div>
             <div class="navigation">
-                <div class="nav-icon"><a href="#/">Dashboard</a></div>
+                <div class="nav-icon"><a href="#">Dashboard</a></div>
                 <div class="nav-icon"><a href="#about">Tickets</a></div>
                 <div class="nav-icon"><a href="#contact">Graphs</a></div>
                 <div class="nav-icon"><a href="#contact">Web Console</a></div>
@@ -48,34 +48,42 @@
                 <div class="nav-icon"><a href="#contact">PST</a></div>
             </div>
             <div class="app" ng-view>
-                <div class="sidebar">sdf</div>
-                <div class="cardui wrap gutter-5-xl gutter-10-xs gutter-out-xs">
-                    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
-                        <div class="card">card 1</div>
-                    </div>
-                    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
-                        <div class="card">card 2</div>
-                    </div>
-                    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
-                        <div class="card">card 3</div>
-                    </div>
-                    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
-                        <div class="card">card 4</div>
-                    </div>
-                    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-                        <div class="card">card 5</div>
-                    </div>
-                    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-                        <div class="card">card 6</div>
-                    </div>
-                    <div class="xl-3-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-                        <div class="card">card 7</div>
-                    </div>
-                    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-                        <div class="card">card 8</div>
-                    </div>
-                    <div class="xl-1-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-                        <div class="card">card 9</div>
+                <div class="sidebar">
+                    <ul class="side-list">
+                        <li class="side-icon">Search</li>
+                        <li class="side-icon">Suppress Alarm</li>
+                        <li class="side-icon">Send to Ticket</li>
+                    </ul>
+                </div>
+                <div class="cardui">
+                    <div class="wrap gutter-5-xl gutter-10-xs gutter-out-xs">
+                        <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                            <div class="card">card 1</div>
+                        </div>
+                        <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                            <div class="card">card 2</div>
+                        </div>
+                        <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                            <div class="card">card 3</div>
+                        </div>
+                        <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                            <div class="card">card 4</div>
+                        </div>
+                        <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                            <div class="card">card 5</div>
+                        </div>
+                        <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                            <div class="card">card 6</div>
+                        </div>
+                        <div class="xl-3-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                            <div class="card">card 7</div>
+                        </div>
+                        <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                            <div class="card">card 8</div>
+                        </div>
+                        <div class="xl-1-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                            <div class="card">card 9</div>
+                        </div>
                     </div>
                 </div>
             </div>
