--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,9 @@
                             <div class="card">card 4</div>
                         </div>
                         <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-                            <div class="card">card 5</div>
+                            <div class="card">
+                                <div 
+                            </div>
                         </div>
                         <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
                             <div class="card">card 6</div>
@@ -87,9 +89,9 @@
                     </div>
                 </div>
             </div>
-            <div class="push"></div>
+            <!-- <div class="push"></div> -->
         </div>           
-        <div class="footer">Virtela OP360 Network Management System | Version 0.1 | Copyright 2015, Virtela Services Inc.</div>
+        <!-- <div class="footer">Virtela OP360 Network Management System | Version 0.1 | Copyright 2015, Virtela Services Inc.</div> -->
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
