major stylistic changes

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
         <!-- Add your site or application content here -->
         <div class="wrapper">
             <div class="header">
+                <div class="hamburger">Menu</div>
                 <div class="logo"><img src="img/logo-white.png" /></div>
                 <div class="utility-bar">
                     <div class="profile">
