--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <div class="wrapper">
             <div class="header">
                 <div class="hamburger">Menu</div>
-                <div class="logo"><img src="img/logo-white.png" /></div>
+                <div class="logo"><img class="logo-img" src="img/logo-white.png" /></div>
                 <div class="utility-bar">
                     <div class="profile">
                         <div class="profile__picture"><img src="img/profile.png"></div>
