--- a/public/index.html
+++ b/public/index.html
@@ -39,14 +39,14 @@
                 <div class="clear"></div>
             </div>
             <div class="navigation">
-                <div class="nav-icon"><a href="#">Dashboard</a></div>
-                <div class="nav-icon"><a href="#about">Tickets</a></div>
-                <div class="nav-icon"><a href="#contact">Graphs</a></div>
-                <div class="nav-icon"><a href="#contact">Web Console</a></div>
-                <div class="nav-icon"><a href="#contact">NERC Events</a></div>
-                <div class="nav-icon"><a href="#contact">Supression</a></div>
-                <div class="nav-icon"><a href="#contact">Provisioning</a></div>
-                <div class="nav-icon"><a href="#contact">PST</a></div>
+                <div class="nav-icon" ng-class="{active: $route.current.activetab == 'dashboard'}"><a href="#dashboard">Dashboard</a></div>
+                <div class="nav-icon" ng-class="{active: $route.current.activetab == 'about'}"><a href="#about">Tickets</a></div>
+                <div class="nav-icon" ng-class="{active: $route.current.activetab == 'contact'}"><a href="#contact">Graphs</a></div>
+                <div class="nav-icon" ng-class="{active: $route.current.activetab == 'webconsole'}"><a href="#contact">Web Console</a></div>
+                <div class="nav-icon" ng-class="{active: $route.current.activetab == 'nerc'}"><a href="#contact">NERC Events</a></div>
+                <div class="nav-icon" ng-class="{active: $route.current.activetab == 'suppression'}"><a href="#contact">Supression</a></div>
+                <div class="nav-icon" ng-class="{active: $route.current.activetab == 'provisioning'}"><a href="#contact">Provisioning</a></div>
+                <div class="nav-icon" ng-class="{active: $route.current.activetab == 'pst'}"><a href="#contact">PST</a></div>
             </div>
             <div class="app">
                 <div class="sidebar">
