--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         <!--<link rel="stylesheet" href="css/bootstrap.css">-->
         <link rel="stylesheet" href="css/flexiblegs.css">
         <link rel="stylesheet" href="css/angular-busy.css">
+        <link rel="stylesheet" href="css/angular-dropdowns.css">
     <!--<script src="js/vendor/modernizr-2.8.3.min.js"></script>-->
     </head>
     <body ng-controller="dashboardController">
@@ -27,7 +28,7 @@
         <!-- Add your site or application content here -->
         <div class="wrapper">
             <div class="header">
-                <div class="hamburger">Menu</div>
+                <div class="hamburger"><img src="img/men25.svg"/></div>
                 <div class="logo"><img class="logo-img" src="img/logo-white.png" /></div>
                 <div class="utility-bar">
                     <div class="profile">
@@ -51,9 +52,9 @@
             <div class="app">
                 <div class="sidebar">
                     <ul class="side-list">
-                        <li class="side-icon">Search</li>
-                        <li class="side-icon">Suppress Alarm</li>
-                        <li class="side-icon">Send to Ticket</li>
+                        <li class="side-icon"><img src="img/search74.svg" class="side-img" /></br/>Search</li>
+                        <li class="side-icon"><img src="img/alarm31.svg" class="side-img" /></br/>Suppress Alarm</li>
+                        <li class="side-icon"><img src="img/paper122.svg" class="side-img" /></br/>Send to Ticket</li>
                     </ul>
                 </div>
                 <div class="panel-container">
@@ -79,6 +80,7 @@
         <script src="js/vendor/angular-busy.js"></script>
         <script src="js/vendor/highcharts.js"></script>
         <script src="js/vendor/moment.min.js"></script>
+        <script src="js/vendor/angular-dropdowns.js"></script>
         <!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
         <script src="http://code.highcharts.com/modules/data.js"></script>
         <script src="http://code.highcharts.com/modules/no-data-to-display.js"></script>-->
