--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="css/flexiblegs.css">
         <link rel="stylesheet" href="css/angular-busy.css">
         <link rel="stylesheet" href="css/angular-dropdowns.css">
+        <link rel="stylesheet" href="css/ngDialog.css">
+        <link rel="stylesheet" href="css/ngDialog-theme-default.css">
     <!--<script src="js/vendor/modernizr-2.8.3.min.js"></script>-->
     </head>
     <body ng-controller="dashboardController">
@@ -43,7 +45,7 @@
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'dashboard'}"><a href="#dashboard">Dashboard</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'about'}"><a href="#about">Tickets</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'contact'}"><a href="#contact">Graphs</a></div>
-                <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'webconsole'}"><a href="#contact">Web Console</a></div>
+                <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'webconsole'}"><a href="#webconsole">Web Console</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'nerc'}"><a href="#contact">NERC Events</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'suppression'}"><a href="#contact">Supression</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'provisioning'}"><a href="#contact">Provisioning</a></div>
@@ -81,11 +83,18 @@
         <script src="js/vendor/highcharts.js"></script>
         <script src="js/vendor/moment.min.js"></script>
         <script src="js/vendor/angular-dropdowns.js"></script>
+        <script src="js/vendor/ngDialog.js"></script>
         <!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
         <script src="http://code.highcharts.com/modules/data.js"></script>
         <script src="http://code.highcharts.com/modules/no-data-to-display.js"></script>-->
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <script src="js/sampleJSON.js"></script>
+
+        <!-- templates -->
+        <script type="text/ng-template" id="templateId">
+            <h1>Template heading</h1>
+            <p>Content goes here</p>
+        </script>
     </body>
 </html>
