Changed Search Box UI
adjusted width of search panel

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="panel-container">
                     <div class="filter-box__form-element">
-                        <input ng-model="searchTerm" class="filter-box__text-input" type="text" placeholder="CABRCV1-CROCS-RTR-1" />
+                        <input ng-model="searchTerm" class="filter-box__text-input search-box" type="text" placeholder="CABRCV1-CROCS-RTR-1" />
                     </div><!--
                     --><button class="btn-red" ng-click="search(searchTerm)">SEARCH</button>
                 </div>
