--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,13 @@
             </div>
             <div class="navigation">
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'dashboard'}"><a href="#dashboard">Dashboard</a></div>
-                <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'about'}"><a href="#about">Tickets</a></div>
-                <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'contact'}"><a href="#contact">Graphs</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'webconsole'}"><a href="#webconsole">Web Console</a></div>
+<!--                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'about'}"><a href="#about">Tickets</a></div>
+                <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'contact'}"><a href="#contact">Graphs</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'nerc'}"><a href="#contact">NERC Events</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'suppression'}"><a href="#contact">Supression</a></div>
                 <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'provisioning'}"><a href="#contact">Provisioning</a></div>
-                <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'pst'}"><a href="#contact">PST</a></div>
+                <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'pst'}"><a href="#contact">PST</a></div> -->
             </div>
             <div class="app">
                 <div class="sidebar">
