--- a/public/index.html
+++ b/public/index.html
@@ -61,10 +61,16 @@
                 </div>
                 <div class="panel-container">
                     <div class="filter-box__form-element">
-                        <input ng-model="searchTerm" class="filter-box__text-input search-box" type="text" placeholder="CABRCV1-CROCS-RTR-1" />
+                        <input ng-model="searchTerm" ng-change="autosuggest();" class="filter-box__text-input search-box" type="text" placeholder="CABRCV1-CROCS-RTR-1" />
                     </div><!--
                     --><button class="btn-red" ng-click="search(searchTerm)">SEARCH</button>
+                    <div class="panel-results">
+                        <ul>
+                            <li ng-repeat="result in results | limitTo: 10">{{result}}</li>
+                        </ul>
+                    </div>
                 </div>
+                <div class="overlay fade-out"></div>
                 <div class="cardui" ng-view  cg-busy="{promise:promise,message:'Loading Your Data...'}">
                 </div>
             </div>
