--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="css/ngDialog-theme-default.css">
     <!--<script src="js/vendor/modernizr-2.8.3.min.js"></script>-->
     </head>
-    <body ng-controller="dashboardController">
+    <body ng-controller="initController">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -66,7 +66,7 @@
                     --><button class="btn-red" ng-click="search(searchTerm)">SEARCH</button>
                     <div class="panel-results">
                         <ul>
-                            <li ng-repeat="result in results | limitTo: 10">{{result}}</li>
+                            <li class="animate-repeat" ng-click="search(result)" ng-repeat="result in results | limitTo: 10">{{result}}</li>
                         </ul>
                     </div>
                 </div>
