--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="css/ngDialog.css">
         <link rel="stylesheet" href="css/ngDialog-theme-default.css">
         <link rel="stylesheet" href="css/ngDialog-theme-webconsole.css">
+        <link rel="stylesheet" href="css/ngDialog-theme-login.css">
     <!--<script src="js/vendor/modernizr-2.8.3.min.js"></script>--> 
         <!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
@@ -60,24 +61,33 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
                 <div class="sidebar">
                     <ul class="side-list">
                         <li class="side-icon"><img src="img/search74.svg" class="side-img" /></br/>Search</li>
-                        <li class="side-icon"><img src="img/alarm31.svg" class="side-img" /></br/>Suppress Alarm</li>
-                        <li class="side-icon"><img src="img/paper122.svg" class="side-img" /></br/>Send to Ticket</li>
+<!--                         <li class="side-icon"><img src="img/alarm31.svg" class="side-img" /></br/>Suppress Alarm</li>
+                        <li class="side-icon"><img src="img/paper122.svg" class="side-img" /></br/>Send to Ticket</li> -->
                     </ul>
                 </div>
                 <div class="panel-container">
                     <div class="filter-box__form-element">
-                        <input ng-model="searchTerm" ng-change="autosuggest();" class="filter-box__text-input search-box" type="text" placeholder="CABRCV1-CROCS-RTR-1" />
+                        <input ng-model="searchTerm" ng-change="autosuggest('25');" ng-enter="search(searchTerm);" class="filter-box__text-input search-box" type="text" placeholder="CABRCV1-CROCS-RTR-1" />
                     </div><!--
                     --><button class="btn-red" ng-click="search(searchTerm)">SEARCH</button>
-                    <div class="panel-results">
-                        <ul>
-                            <li class="animate-repeat" ng-click="search(result)" ng-repeat="result in results | limitTo: 25">{{result}}</li>
-                            <li ng-show="result == 'Error'">No entries found.</li>
-                        </ul>
+                    <div class="panel-results" cg-busy="{promise:aspromise}">
+                        <table class="srp-table">
+                            <tr class="srp-click" ng-click="search(value.vhid)" ng-repeat="(key, value) in results | limitTo: 25">
+                                <td><span class="mini-pill" ng-class="{pillgreen: value.status == 'UP', pillred: value.status == 'DOWN'}">{{value.status}}</span></td>
+                                <td>{{value.vhid}}</td>
+                            </tr>
+                            <tr ng-show="results.general_message == 'Error'">
+                                <td colspan="2">No matches found.</td>
+                            </tr>
+                        </table>
+<!--                         <ul>
+                            <li class="animate-repeat" ng-click="search(result)" ng-repeat="result in results.Hosts | limitTo: 25">{{result}}</li>
+                            <li class="autosuggest-error" ng-show="results.general_message == 'Error'">No entries found.</li>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="overlay fade-out"></div>
-                <div class="cardui" ng-view  cg-busy="{promise:promise, message:'Loading Your Data...'}">
+                <div class="cardui" ng-view  cg-busy="{promise:promise}">
                 </div>
             </div>
             <!-- <div class="push"></div> -->
@@ -106,6 +116,11 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
         <!-- templates -->
         <script type="text/ng-template" id="templateId">
             <h1>Template heading</h1>
+        </script>
+
+        <script type="text/ng-template" id="errorTemplate">
+            <h4>The application encountered an error</h4>
+            <p>{{errormsg}}</p>
         </script>
     </body>
 </html>
