--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,12 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div id="st-container" class="st-container">
+        <div id="st-container" class="st-container" ng-class="{'st-menu-open': offCanvasOpen == true, 'st-effect-9': offCanvasOpen == true}">
                 <nav class="st-menu st-effect-9" id="menu-9">
                 <h2 class="icon icon-lab">Applications Menu</h2>
                 <ul>
-                    <li><a class="icon icon-data" href="#">OPS360 NMS</a></li>
-                    <li><a class="icon icon-location" href="#">Predictive Analytics</a></li>
+                    <li><a class="icon" href="#/dashboard">OPS360 NMS</a></li>
+                    <li>Predictive Analytics</li>
                     <li ng-click="closeOffCanvas()">Close</li>
                 </ul>
             </nav>
@@ -61,12 +61,12 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
                         <div class="navigation">
                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'dashboard'}"><a href="#dashboard">Dashboard</a></div>
                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'webconsole'}"><a href="#webconsole">Web Console</a></div>
-                            <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'about'}"><a href="#about">Tickets</a></div>
+<!--                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'about'}"><a href="#about">Tickets</a></div>
                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'contact'}"><a href="#contact">Graphs</a></div>
                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'nerc'}"><a href="#contact">NERC Events</a></div>
                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'suppression'}"><a href="#contact">Supression</a></div>
                             <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'provisioning'}"><a href="#contact">Provisioning</a></div>
-                            <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'pst'}"><a href="#contact">PST</a></div>
+                            <div class="nav-icon" ng-class="{navactive: $route.current.activetab == 'pst'}"><a href="#contact">PST</a></div> -->
                         </div>
                         <div class="app">
                             <!--
@@ -76,12 +76,12 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
                             -->
                             <div class="sidebar">
                                 <ul class="side-list">
-                                    <li class="side-icon"><img src="img/search74.svg" class="side-img" /></br/>Search</li>
-                                    <li class="side-icon"><img src="img/alarm31.svg" class="side-img" /></br/>Suppress Alarm</li>
-                                    <li class="side-icon"><img src="img/paper122.svg" class="side-img" /></br/>Send to Ticket</li>
+                                    <li class="side-icon" ng-controller="searchPanelCtrl" ng-click="openSearch()"><img src="img/search74.svg" class="side-img" /></br/>Search</li>
+<!--                                     <li class="side-icon" ng-controller="alarmPanelCtrl" ng-click="openAlarm()"><img src="img/alarm31.svg" class="side-img" /></br/>Suppress Alarm</li>
+                                    <li class="side-icon"><img src="img/paper122.svg" class="side-img" /></br/>Send to Ticket</li> -->
                                 </ul>
                             </div>
-                            <div class="panel-container">
+                            <div id="searchPane" class="panel-container" ng-class="{'panel-open': searchOpen == true}">
                                 <div class="filter-box__form-element">
                                     <input ng-model="searchTerm" ng-change="autosuggest('25');" ng-enter="search(searchTerm);" class="filter-box__text-input search-box" type="text" placeholder="CABRCV1-CROCS-RTR-1" />
                                 </div><!--
@@ -98,7 +98,10 @@ mixpanel.init("533e4c0adb76e40df613112607da25e3");</script><!-- end Mixpanel -->
                                     </table>
                                 </div>
                             </div>
-                            <div class="overlay fade-out"></div>
+<!--                             <div id="alarmPane" class="panel-container">
+                                <h2>Alarm Suppression</h2>
+                            </div> -->
+                            <div class="overlay" ng-class="{'overlay--on': searchOpen == true}"></div>
                             <div class="cardui" ng-view cg-busy="{promise:promise}">
                             </div>
                         </div>
